tests/errors/alias_call_extra_arg.ptt
// Codex audit P0-1: module-qualified calls must check arity.
// math.max takes 2; calling with 3 must fail at compile time.

use std/string
use std/math

spark {
  yell(math.max(1, 2, 3))
}
